--- a/Bilverkstad1/PresentationLager/Login.xaml
+++ b/Bilverkstad1/PresentationLager/Login.xaml
@@ -177,7 +177,8 @@
                         Cursor="Hand"
                         Grid.Row="2" 
                         VerticalAlignment="Top" 
-                        Click="Btnlogin_Click">
+                        Click="Btnlogin_Click"
+                        Name ="BtnLogin" IsDefault="True">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Width="150" Height="40"
