--- a/Bilverkstad1/App.xaml
+++ b/Bilverkstad1/App.xaml
@@ -54,6 +54,19 @@
            
         </Style>
 
+        <Style x:Key="ComboBox"  TargetType="ComboBox">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="Beige"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Height" Value="23"/>
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="BorderBrush" Value="DarkGray"/>
+            <Setter Property="BorderThickness" Value="0,0,0,0"/>
+            <Setter Property="Width" Value="157"/>
+
+        </Style>
+
 
         <Style x:Key="ColumnHeaderGripperStyle" TargetType="{x:Type Thumb}">
             <Setter Property="Width" Value="8"/>
