--- a/Bilverkstad1/PresentationLager/Login.xaml
+++ b/Bilverkstad1/PresentationLager/Login.xaml
@@ -177,8 +177,7 @@
                         Cursor="Hand"
                         Grid.Row="2" 
                         VerticalAlignment="Top" 
-                        Click="Btnlogin_Click"
-                        Name ="BtnLogin" IsDefault="True">
+                        Click="Btnlogin_Click">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Width="150" Height="40"
