--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -148,12 +148,14 @@
                            HorizontalAlignment="Left" 
                            Height="24" Margin="19,75,0,0" 
                            VerticalAlignment="Top" 
-                           Width="101"/>
+                           Width="101"
+                           />
                     <TextBox Style="{StaticResource TextBoxInput}" 
                              x:Name="Personnummer"
                              HorizontalAlignment="Left" 
                              Margin="150,79,0,0" 
                              VerticalAlignment="Top" Foreground="Black"
+                             PreviewTextInput="Siffror_Kontroll"
                             />
                     <TextBox Style="{StaticResource TextBoxInput}" 
                              x:Name="Adress"
@@ -161,7 +163,12 @@
                              Margin="150,119,0,0" 
                              VerticalAlignment="Top" TextChanged="Adress_TextChanged" Foreground="Black"/>
                     <Label Content="Adress" HorizontalAlignment="Left" Height="24" Margin="19,107,0,0" VerticalAlignment="Top" Width="61"/>
-                    <Label Content="TelefonNr" HorizontalAlignment="Left" Height="24" Margin="320,42,0,0" VerticalAlignment="Top" Width="61" Name="TelefonnrLbl"/>
+                    <Label Content="TelefonNr" 
+                           HorizontalAlignment="Left" 
+                           Height="24" Margin="320,42,0,0" 
+                           VerticalAlignment="Top" Width="61" 
+                           Name="TelefonnrLbl"
+                           />
                     <TextBox Style="{StaticResource TextBoxInput}" 
                              x:Name="Epost"
                              HorizontalAlignment="Left" 
@@ -172,16 +179,22 @@
                              HorizontalAlignment="Left" 
                              Height="16" 
                              Margin="405,46,0,0" 
-                             VerticalAlignment="Top" TextChanged="TelefonNr_TextChanged" Foreground="Black"/>
+                             VerticalAlignment="Top" TextChanged="TelefonNr_TextChanged" Foreground="Black"
+                             PreviewTextInput="Siffror_Kontroll"/>
                     <Label Content="E-post" HorizontalAlignment="Left" Height="24" Margin="320,81,0,0" VerticalAlignment="Top" Width="61"/>
 
                 </Grid>
                 <DataGrid x:Name="KunderDataGrid"
                           Style="{DynamicResource DataGridStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
-                          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                          Grid.Row="2" Margin="0,0,10,0"
-                          IsReadOnly="true" SelectionChanged="KunderDataGrid_SelectionChanged">
+                          Grid.Row="2" Margin="0,0,5,0"
+                          IsReadOnly="true" SelectionChanged="KunderDataGrid_SelectionChanged"  
+                          Background="#FFFDFDFE">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="Foreground" Value="Black"></Setter>
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>>
 
                     <DataGrid.RowStyle>
                         
