--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -94,6 +94,12 @@
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
+                            <Button Style="{StaticResource ButtonMenu}" Margin="10,20,10,0" x:Name="BtnÅterställ"
+                                Content="Återställ" Click="BtnÅterställ_OnClick_Click" Background="#FF6067F1" FontSize="12" >
+                                <Button.Effect>
+                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                </Button.Effect>
+                            </Button>
 
 
                         </StackPanel>
@@ -118,17 +124,10 @@
                 </Grid.RowDefinitions>
                 <!--text Search-->
                 <Grid Grid.Row="1" Grid.Column="1">
-
-                    <TextBlock 
-                               VerticalAlignment="Top" 
-                               Foreground="Gray"
-                               IsHitTestVisible="False" 
-                                Visibility="Visible" Margin="476,11,0,0">
-                                <Run Text="Search here"/><Run Language="sv-se" Text=" "/><Run Text="..."/>
-                    </TextBlock>
                     <TextBox Style="{StaticResource TextBoxSearch}" 
                              x:Name="txtSearch" Height="18" 
-                             Margin="464,10,10,0" VerticalAlignment="Top" TextChanged="txtSearch_TextChanged" />
+                             Foreground="Black"
+                             Margin="451,11,24,0" VerticalAlignment="Top" TextChanged="txtSearch_TextChanged" />
                     <TextBox Style="{StaticResource TextBoxInput}" 
                              x:Name="Namn"
                              HorizontalAlignment="Left" 
@@ -182,13 +181,14 @@
                              VerticalAlignment="Top" TextChanged="TelefonNr_TextChanged" Foreground="Black"
                              PreviewTextInput="Siffror_Kontroll"/>
                     <Label Content="E-post" HorizontalAlignment="Left" Height="24" Margin="320,81,0,0" VerticalAlignment="Top" Width="61"/>
+                    <Label Content="Sök" HorizontalAlignment="Left" Margin="421,6,0,0" VerticalAlignment="Top"/>
 
                 </Grid>
                 <DataGrid x:Name="KunderDataGrid"
                           Style="{DynamicResource DataGridStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           Grid.Row="2" Margin="0,0,5,0"
-                          IsReadOnly="true" SelectionChanged="KunderDataGrid_SelectionChanged"  
+                          IsReadOnly="true"   
                           Background="#FFFDFDFE">
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
