--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -83,7 +83,7 @@
                     <DockPanel>
                         <StackPanel DockPanel.Dock="Top">
                             <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0" Name="BtnNykund"
-                                     Content="Ny NyKund" Click="BtnNykund_Click" Background="#FF6067F1" FontSize="12" >
+                                     Content="Ny Kund" Click="BtnNykund_Click" Background="#FF6067F1" FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
